@@ -2,7 +2,7 @@ use Apache::test;
 
 skip_test if WIN32;
 
-my $qs = "I_am_dying";
+my $qs = "This_is_not_a_real_error";
 my $content = fetch "/perl/throw_error.pl?$qs";
 
 my $i = 0;
