@@ -4,5 +4,5 @@ $r->custom_response(500, "/perl/server_error.pl");
 
 my $qs = $r->args;
 
-die $qs;
+die "$qs\n";
 
